Implement responsive editor and dashboard features (Fix: remove hardcoded secrets)

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -294,7 +294,7 @@
         </a>
         <div class="user-nav">
             <span id="userName" style="font-weight: 600;"></span>
-            <a href="data-collection.html" class="btn-new">
+            <a href="data-collection.html" onclick="localStorage.removeItem('currentEditingSlug')" class="btn-new">
                 <i class="fas fa-plus"></i>
                 <span>Create New</span>
             </a>
